--- a/apmis-flow/src/main/webapp/pivot_trial/samples/01_init/07_grid_flat_mode.html
+++ b/apmis-flow/src/main/webapp/pivot_trial/samples/01_init/07_grid_flat_mode.html
@@ -40,10 +40,13 @@
 					values: [],
 				},
 				fieldList: [
+					{ id: "campaignname", label: "Campaign Year" },
+					{ id: "campaignyear", label: "Campaign Year" },
 					{ id: "area", label: "Region" },
 					{ id: "region", label: "Province" },
 					{ id: "district", label: "District" },
-					{ id: "fieldcaption", label: "Form Name" },
+					{ id: "formname", label: "Form Name" },
+					{ id: "fieldcaption", label: "Form Field Caption" },
 					{ id: "formid", label: "Form ID" },
 					{ id: "sumvalue", label: "Sum" },
 				
