--- a/apmis-flow/src/main/webapp/pivot_trial/samples/01_init/07_grid_flat_mode.html
+++ b/apmis-flow/src/main/webapp/pivot_trial/samples/01_init/07_grid_flat_mode.html
@@ -43,9 +43,11 @@
 					{ id: "area", label: "Region" },
 					{ id: "region", label: "Province" },
 					{ id: "district", label: "District" },
-					{ id: "fieldcaption", label: "Form Name" },
-					{ id: "formid", label: "Form ID" },
-					{ id: "sumvalue", label: "Sum" },
+					{ id: "formname", label: "Form Name" },
+					{ id: "campaign", label: "Campaign" },
+					{ id: "fieldcaption", label: "FieldName" },
+					{ id: "year", label: "Campaign_Year" },
+					{ id: "value", label: "Total" },
 				
 		
 				],
