--- a/apmis-flow/src/main/webapp/pivottablejs.html
+++ b/apmis-flow/src/main/webapp/pivottablejs.html
@@ -200,6 +200,7 @@ font-size: 14px;
         $.getJSON("mps.json", function(mps) {
             $("#output").pivotUI(mps, {
                 renderers: renderers,
+                hiddenAttributes: ["uuid", "formuuid"],
                 cols: ["area"], rows: ["year"],
                 rendererName: "TSV Export"
             });
