--- a/apmis-flow/src/main/webapp/feedbackform/feedbackforminput.html
+++ b/apmis-flow/src/main/webapp/feedbackform/feedbackforminput.html
@@ -46,20 +46,28 @@
 
 		<div class="fullname" style="display: flex;">
 
-			<div class="firstname" style="width: 50%; margin-right: 2%;">
-				<label for="First_Name"
+			<div class="fullname" style="width: 50%; margin-right: 2%;">
+				<label for="Full_Name"
 					style="font-size: 14px; font-family: system-ui; color: #0D6938;">First
-					Name</label><br> <input id="First_Name" name="First_Name" type="name"
-					placeholder="First Name"
+					Name</label><br> <input id="Full_Name" name="Full_Name" type="name"
+					placeholder="Full Name"
 					style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;"
 					required>
 			</div>
 			<div class="lastname" style="width: 50%;">
-				<label for="Last_Name"
+
+				<label for="Email"
+					style="font-size: 14px; font-family: system-ui; color: #0D6938;">Email</label><br>
+				<input id="Email" name="Email" type="email"
+					placeholder="Your Email Address" required
+					style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;"><br>
+
+
+				<!-- label for="Last_Name"
 					style="font-size: 14px; font-family: system-ui; color: #0D6938;">Last
 					Name</label><br> <input id="Last_Name" name="Last_Name" type="text"
 					placeholder="Last Name"
-					style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;">
+					style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;"-->
 			</div>
 		</div>
 
@@ -118,12 +126,7 @@
 			</div>
 		</div>
 
-		<label for="Email"
-			style="font-size: 14px; font-family: system-ui; color: #0D6938;">Email</label><br>
-		<input id="Email" name="Email" type="email"
-			placeholder="Your Email Address" required
-			style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;"><br>
-
+	
 		<label for="Comment"
 			style="font-size: 14px; font-family: system-ui; color: #0D6938;">Feedback</label><br>
 		<textarea id="Comment" name="Comment" type="comment"
