--- a/apmis-flow/src/main/webapp/feedbackform/feedbackforminput.html
+++ b/apmis-flow/src/main/webapp/feedbackform/feedbackforminput.html
@@ -48,7 +48,7 @@
 
 			<div class="fullname" style="width: 50%; margin-right: 2%;">
 				<label for="Full_Name"
-					style="font-size: 14px; font-family: system-ui; color: #0D6938;">First
+					style="font-size: 14px; font-family: system-ui; color: #0D6938;">Full
 					Name</label><br> <input id="Full_Name" name="Full_Name" type="name"
 					placeholder="Full Name"
 					style="margin-top: 10px; width: 100%; height: 35px; border-radius: 5px; border: 1px solid #0D6938; margin-bottom: 20px;"
